fix: profile pop-up alignment

--- a/src/components/ProfilePopup/ProfilePopup.css
+++ b/src/components/ProfilePopup/ProfilePopup.css
@@ -1,7 +1,7 @@
 .profile-popup {
   position: absolute;
   padding: 1rem 0;
-  bottom: 45px;
+  bottom: 120px;
   left: 10px;
   /* right: 0; */
   border-radius: 1rem;
